Exodia.Lang/Antlr/ExodiaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Exodia.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Exodia.Lang {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ExodiaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		SINGLE_COMMENT=10, BLOCK_COMMENT=11, MUT=12, CONST=13, RETURN=14, FN=15, 
		IF=16, AS=17, ELSE=18, WHILE=19, DO=20, FOR=21, DYN=22, GIVE=23, STRUCT=24, 
		CLASS=25, INTERFACE=26, IMPL=27, ENUM=28, NAMESPACE=29, EXTENDS=30, THIS=31, 
		SUPER=32, NEW=33, MATCH=34, WHEN=35, PANIC=36, WHERE=37, CHAR=38, CONSTRUCTOR=39, 
		PUBLIC=40, PRIVATE=41, PROTECTED=42, INTERNAL=43, GLOBAL=44, STATIC=45, 
		WHITESPACE=46, INTEGER=47, FLOAT=48, STRING=49, TRUE=50, FALSE=51, ADDITIVE_OPERATOR=52, 
		MULTIPLICATIVE_OPERATOR=53, LT=54, GT=55, LE=56, GE=57, FATARROW=58, ARROW=59, 
		PIPE=60, DOTDOT=61, QUESTION=62, DOUBLE_BANG=63, COLONCOLON=64, COLON=65, 
		EQUALITY_OPERATOR=66, LOGICAL_OR=67, LOGICAL_AND=68, SIMPLE_ASSIGNMENT_OPERATOR=69, 
		COMPLEX_ASSIGMENT_OPERATOR=70, IDENTIFIER=71, SEMI=72;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_accessability_modifier = 2, 
		RULE_mut_flag = 3, RULE_where_clause = 4, RULE_namespace_member = 5, RULE_namespace_declaration = 6, 
		RULE_member_kind = 7, RULE_member = 8, RULE_method_declaration = 9, RULE_constructor_declaration = 10, 
		RULE_field_declaration = 11, RULE_class_declaration = 12, RULE_enum_declaration = 13, 
		RULE_enum_variant_list = 14, RULE_enum_variant = 15, RULE_enum_variant_payload = 16, 
		RULE_interface_declaration = 17, RULE_interface_extends = 18, RULE_interface_member = 19, 
		RULE_interface_outputs = 20, RULE_method_signature = 21, RULE_impl_declaration = 22, 
		RULE_impl_outputs = 23, RULE_struct_declaration = 24, RULE_class_extends = 25, 
		RULE_iteration_statement = 26, RULE_for_statement = 27, RULE_do_while_statement = 28, 
		RULE_while_statement = 29, RULE_variable_statement = 30, RULE_variable_declaration = 31, 
		RULE_variable_declaration_list = 32, RULE_variable_initializer = 33, RULE_if_statement = 34, 
		RULE_empty_statement = 35, RULE_return_statement = 36, RULE_give_statement = 37, 
		RULE_block_statement = 38, RULE_function_declaration = 39, RULE_function_body = 40, 
		RULE_formal_parameter = 41, RULE_formal_parameter_list = 42, RULE_expression_statement = 43, 
		RULE_panic_expression = 44, RULE_expression = 45, RULE_assignment_expression = 46, 
		RULE_assignment_operator = 47, RULE_left_hand_side_expression = 48, RULE_this_expression = 49, 
		RULE_identifier = 50, RULE_logical_OR_expression = 51, RULE_logical_AND_expression = 52, 
		RULE_equality_expression = 53, RULE_relational_expression = 54, RULE_shift_expression = 55, 
		RULE_shift_operator = 56, RULE_additive_expression = 57, RULE_multiplicative_expression = 58, 
		RULE_cast_expression = 59, RULE_unary_expression = 60, RULE_postfix_expression = 61, 
		RULE_postfix_op = 62, RULE_super = 63, RULE_arguments = 64, RULE_argument_list = 65, 
		RULE_argument = 66, RULE_new_expression = 67, RULE_match_expression = 68, 
		RULE_match_arm = 69, RULE_arm_body = 70, RULE_pattern = 71, RULE_primary_pattern = 72, 
		RULE_pattern_payload = 73, RULE_primary_expression = 74, RULE_parenthesized_expression = 75, 
		RULE_qualified_name = 76, RULE_type = 77, RULE_type_arguments = 78, RULE_type_parameters = 79, 
		RULE_type_parameter = 80, RULE_literal = 81, RULE_array_literal = 82, 
		RULE_char_literal = 83, RULE_true_literal = 84, RULE_false_literal = 85, 
		RULE_numeric_literal = 86, RULE_string_literal = 87;
	public static readonly string[] ruleNames = {
		"program", "statement", "accessability_modifier", "mut_flag", "where_clause", 
		"namespace_member", "namespace_declaration", "member_kind", "member", 
		"method_declaration", "constructor_declaration", "field_declaration", 
		"class_declaration", "enum_declaration", "enum_variant_list", "enum_variant", 
		"enum_variant_payload", "interface_declaration", "interface_extends", 
		"interface_member", "interface_outputs", "method_signature", "impl_declaration", 
		"impl_outputs", "struct_declaration", "class_extends", "iteration_statement", 
		"for_statement", "do_while_statement", "while_statement", "variable_statement", 
		"variable_declaration", "variable_declaration_list", "variable_initializer", 
		"if_statement", "empty_statement", "return_statement", "give_statement", 
		"block_statement", "function_declaration", "function_body", "formal_parameter", 
		"formal_parameter_list", "expression_statement", "panic_expression", "expression", 
		"assignment_expression", "assignment_operator", "left_hand_side_expression", 
		"this_expression", "identifier", "logical_OR_expression", "logical_AND_expression", 
		"equality_expression", "relational_expression", "shift_expression", "shift_operator", 
		"additive_expression", "multiplicative_expression", "cast_expression", 
		"unary_expression", "postfix_expression", "postfix_op", "super", "arguments", 
		"argument_list", "argument", "new_expression", "match_expression", "match_arm", 
		"arm_body", "pattern", "primary_pattern", "pattern_payload", "primary_expression", 
		"parenthesized_expression", "qualified_name", "type", "type_arguments", 
		"type_parameters", "type_parameter", "literal", "array_literal", "char_literal", 
		"true_literal", "false_literal", "numeric_literal", "string_literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'{'", "'}'", "'('", "')'", "'.'", "'['", "']'", "'_'", null, 
		null, "'mut'", "'const'", "'return'", "'fn'", "'if'", "'as'", "'else'", 
		"'while'", "'do'", "'for'", "'dyn'", "'give'", "'struct'", "'class'", 
		"'interface'", "'impl'", "'enum'", "'namespace'", "'extends'", "'this'", 
		"'super'", "'new'", "'match'", "'when'", "'panic'", "'where'", null, "'ctor'", 
		"'public'", "'private'", "'protected'", "'internal'", "'global'", "'static'", 
		null, null, null, null, "'true'", "'false'", null, null, "'<'", "'>'", 
		"'<='", "'>='", "'=>'", "'->'", "'|'", "'..'", "'?'", "'!!'", "'::'", 
		"':'", null, "'||'", "'&&'", null, null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "SINGLE_COMMENT", 
		"BLOCK_COMMENT", "MUT", "CONST", "RETURN", "FN", "IF", "AS", "ELSE", "WHILE", 
		"DO", "FOR", "DYN", "GIVE", "STRUCT", "CLASS", "INTERFACE", "IMPL", "ENUM", 
		"NAMESPACE", "EXTENDS", "THIS", "SUPER", "NEW", "MATCH", "WHEN", "PANIC", 
		"WHERE", "CHAR", "CONSTRUCTOR", "PUBLIC", "PRIVATE", "PROTECTED", "INTERNAL", 
		"GLOBAL", "STATIC", "WHITESPACE", "INTEGER", "FLOAT", "STRING", "TRUE", 
		"FALSE", "ADDITIVE_OPERATOR", "MULTIPLICATIVE_OPERATOR", "LT", "GT", "LE", 
		"GE", "FATARROW", "ARROW", "PIPE", "DOTDOT", "QUESTION", "DOUBLE_BANG", 
		"COLONCOLON", "COLON", "EQUALITY_OPERATOR", "LOGICAL_OR", "LOGICAL_AND", 
		"SIMPLE_ASSIGNMENT_OPERATOR", "COMPLEX_ASSIGMENT_OPERATOR", "IDENTIFIER", 
		"SEMI"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Exodia.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ExodiaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ExodiaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ExodiaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ExodiaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExodiaVisitor<TResult> typedVisitor = visitor as IExodiaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 179;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8936107877724308L) != 0) || _la==IDENTIFIER || _la==SEMI) {
				{
				{
				State = 176;
				statement();
				}
				}
				State = 181;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 182;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Expression_statementContext expression_statement() {
			return GetRuleContext<Expression_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Empty_statementContext empty_statement() {
			return GetRuleContext<Empty_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Block_statementContext block_statement() {
			return GetRuleContext<Block_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_declarationContext function_declaration() {
			return GetRuleContext<Function_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Return_statementContext return_statement() {
			return GetRuleContext<Return_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Give_statementContext give_statement() {
			return GetRuleContext<Give_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_statementContext variable_statement() {
			return GetRuleContext<Variable_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Iteration_statementContext iteration_statement() {
			return GetRuleContext<Iteration_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Match_expressionContext match_expression() {
			return GetRuleContext<Match_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Class_declarationContext class_declaration() {
			return GetRuleContext<Class_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_declarationContext struct_declaration() {
			return GetRuleContext<Struct_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declarationContext enum_declaration() {
			return GetRuleContext<Enum_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_declarationContext namespace_declaration() {
			return GetRuleContext<Namespace_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Interface_declarationContext interface_declaration() {
			return GetRuleContext<Interface_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Impl_declarationContext impl_declaration() {
			return GetRuleContext<Impl_declarationContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExodiaVisitor<TResult> typedVisitor = visitor as IExodiaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 200;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 184;
				expression_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 185;
				empty_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 186;
				block_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 187;
				function_declaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 188;
				return_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 189;
				give_statement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 190;
				variable_statement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 191;
				if_statement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 192;
				iteration_statement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 193;
				match_expression();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 194;
				class_declaration();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 195;
				struct_declaration();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 196;
				enum_declaration();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 197;
				namespace_declaration();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 198;
				interface_declaration();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 199;
				impl_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Accessability_modifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PUBLIC() { return GetToken(ExodiaParser.PUBLIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(ExodiaParser.PRIVATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTERNAL() { return GetToken(ExodiaParser.INTERNAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROTECTED() { return GetToken(ExodiaParser.PROTECTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GLOBAL() { return GetToken(ExodiaParser.GLOBAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(ExodiaParser.STATIC, 0); }
		public Accessability_modifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_accessability_modifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.EnterAccessability_modifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.ExitAccessability_modifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExodiaVisitor<TResult> typedVisitor = visitor as IExodiaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccessability_modifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Accessability_modifierContext accessability_modifier() {
		Accessability_modifierContext _localctx = new Accessability_modifierContext(Context, State);
		EnterRule(_localctx, 4, RULE_accessability_modifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 202;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 69269232549888L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Mut_flagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUT() { return GetToken(ExodiaParser.MUT, 0); }
		public Mut_flagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mut_flag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.EnterMut_flag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IExodiaListener typedListener = listener as IExodiaListener;
			if (typedListener != null) typedListener.ExitMut_flag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExodiaVisitor<TResult> typedVisitor = visitor as IExodiaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMut_flag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mut_flagContext mut_flag() {
		Mut_flagContext _localctx = new Mut_flagContext(Context, State);
		EnterRule(_localctx, 6, RULE_mut_flag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 204;
			Match(MUT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
